--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
         restart: unless-stopped
         env_file: .env
         volumes:
-            - ./recommender/app:/recommender/app
+            - ./recommender/:/app
         depends_on:
             - api
         networks:
