--- a/recommender/Dockerfile.dev
+++ b/recommender/Dockerfile.dev
@@ -1,5 +1,6 @@
 FROM python:3.9-slim
 
+WORKDIR /app
 
 # Install pipenv and compilation dependencies
 RUN pip install pipenv
@@ -14,7 +15,5 @@ COPY . .
 
 EXPOSE 5000
 
-ENV FLASK_APP=main.py
-
 # Run the application
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
