--- a/recommender/Pipfile
+++ b/recommender/Pipfile
@@ -4,11 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
 python-dotenv = "*"
-flask-restful = "*"
 nltk = "*"
 importlib-metadata = "*"
+jellyfish = "*"
+requests = "*"
+fastapi = "*"
+uvicorn = {version = "*", extras = ["standard"]}
+pydantic = "*"
+fuzzy-match = "*"
+numpy = "*"
+scipy = "*"
+matplotlib = "*"
+redis = "*"
 
 [dev-packages]
 
