--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,10 +1,5 @@
 {
-    "theme_color": "#3579f6",
-    "background_color": "#ffffff",
-    "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
-    "name": "TastyPlan",
+    "name": "PWA TastyPlan",
     "short_name": "TastyPlan",
     "description": "A Demo for TastyPlan",
     "icons": [
@@ -28,5 +23,11 @@
             "sizes": "512x512",
             "type": "image/svg"
         }
-    ]
+    ],
+    "theme_color": "#3579f6",
+    "background_color": "#ffffff",
+    "scope": "/",
+    "start_url": "/",
+    "display": "standalone",
+    "orientation": "portrait"
 }
