--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,24 +4,8 @@
     "description": "A Demo for TastyPlan",
     "icons": [
         {
-            "src": "/logo.svg",
-            "sizes": "192x192",
-            "type": "image/svg"
-        },
-        {
-            "src": "/logo.svg",
-            "sizes": "256x256",
-            "type": "image/svg"
-        },
-        {
-            "src": "/logo.svg",
-            "sizes": "384x384",
-            "type": "image/svg"
-        },
-        {
-            "src": "/logo.svg",
-            "sizes": "512x512",
-            "type": "image/svg"
+            "src": "android-launchericon-144-144.png",
+            "sizes": "144x144"
         }
     ],
     "theme_color": "#3579f6",
