--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "prepare-husky": "husky install",
     "preinstall": "cd frontend && npm install && cd ../api && npm install && cd ..",
     "containers:dev": "docker-compose up --build -d",
     "dev": "docker-compose up --build -d",
@@ -11,7 +12,15 @@
     "browser": "npm run browser:web"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "cypress": "^12.13.0",
+    "husky": "^8.0.3",
     "typescript": "^5.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
