--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^9.0.3",
         "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/schedule": "^4.0.0",
         "@nestjs/serve-static": "^3.0.1",
         "@nestjs/swagger": "^6.2.1",
         "@prisma/client": "^4.15.0",
@@ -78,7 +79,7 @@
         "eslint-plugin-unused-imports": "^2.0.0",
         "jest": "^29.3.1",
         "jest-junit": "^16.0.0",
-        "nodemon": "^2.0.20",
+        "nodemon": "^3.0.1",
         "prettier": "^2.3.2",
         "prisma": "^4.10.1",
         "run-script-webpack-plugin": "^0.2.0",
