--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@commitlint/prompt-cli": "^18.2.0",
     "commitizen": "^4.3.0",
     "conventional-changelog-atom": "^4.0.0",
+    "@types/cron": "^2.4.0",
     "cypress": "^12.13.0",
     "husky": "^8.0.0",
     "inquirer": "^8.2.6",
     "is-ci": "^3.0.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "nest-schedule": "^0.6.4"
   }
 }
