--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,6 +12,7 @@
         "react/no-unescaped-entities": "off",
         "no-console": "warn",
         "react/no-unescaped-entities": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "import-helpers/order-imports": [
             "error",
             {
