--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@elastic/elasticsearch": "~7.17.0",
+        "@nestjs-modules/mailer": "^1.9.1",
         "@nestjs/cache-manager": "^2.1.0",
         "@nestjs/common": "^9.0.0",
         "@nestjs/config": "^2.3.0",
@@ -51,6 +52,8 @@
         "csv": "^6.2.7",
         "csv-parser": "^3.0.0",
         "dotenv": "^16.0.3",
+        "handlebars": "^4.7.8",
+        "nodemailer": "^6.9.7",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
@@ -67,6 +70,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "29.5.7",
         "@types/node": "18.11.18",
+        "@types/nodemailer": "^6.4.14",
         "@types/passport-jwt": "^3.0.8",
         "@types/passport-local": "^1.0.35",
         "@types/supertest": "^2.0.11",
