--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,20 +127,6 @@ build-recommender:
     - docker build -t $CI_REGISTRY_IMAGE/recommender:$IMAGE_TAG .
     - docker push $CI_REGISTRY_IMAGE/recommender:$IMAGE_TAG
 
-# trigger-deploy-prod:
-#   stage: deploy
-#   image: ubuntu:latest
-#   only:
-#     - master
-#   environment:
-#     name: production
-#     url: http://193.170.119.139
-#   before_script:
-#     - apt-get update -qq
-#     - apt-get install -qq curl
-#   script:
-#     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
-
 trigger-deploy-prod:
   stage: deploy
   image: ubuntu:latest
@@ -150,13 +136,10 @@ trigger-deploy-prod:
     name: production
     url: http://193.170.119.139
   before_script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - apt-get update -qq
+    - apt-get install -qq curl
   script:
-    - docker compose pull
-    - docker compose up -d
-  tags: 
-    - prod
-
+    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
 trigger-deploy-test:
   stage: deploy
