--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "zustand": "^4.3.8"
     },
     "devDependencies": {
+        "@axe-core/react": "^4.8.1",
         "@types/node": "^18.15.11",
         "@types/react": "18.2.14",
         "@types/react-dom": "^18.0.11",
