--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
         "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
         "swiper": "^9.1.1",
