--- a/api/package.json
+++ b/api/package.json
@@ -52,6 +52,7 @@
         "csv": "^6.2.7",
         "csv-parser": "^3.0.0",
         "dotenv": "^16.0.3",
+        "elastic-builder": "^2.23.0",
         "handlebars": "^4.7.8",
         "nodemailer": "^6.9.7",
         "passport": "^0.6.0",
