--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
+        "react-select": "^5.8.0",
         "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
         "swiper": "^9.1.1",
