--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@next/font": "13.5.6",
         "framer-motion": "^10.12.16",
         "next": "^13.4.11",
