--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,9 @@ POSTGRES_USER="username"
 POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
+
+AWS_ACCESS_KEY_ID= "AKIAZ5RPJYECQFO4XLHJ"
+AWS_SECRET_ACCESS_KEY="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"
+AWS_REGION = "eu-central-1"
+
+AWS_BUCKET_NAME="tastyplan-images"
