--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev -p 8080",
         "build": "next build",
         "start": "next start -p 8080",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest"
     },
     "dependencies": {
         "@next/font": "13.5.6",
@@ -24,6 +25,11 @@
         "zustand": "^4.3.8"
     },
     "devDependencies": {
+        "@babel/plugin-syntax-jsx": "^7.23.3",
+        "@testing-library/jest-dom": "6.1.5",
+        "@testing-library/react": "14.1.2",
+        "@types/jest": "^29.5.11",
+        "@types/jest-axe": "^3.5.9",
         "@types/node": "^18.15.11",
         "@types/react": "18.2.14",
         "@types/react-dom": "^18.0.11",
@@ -32,10 +38,15 @@
         "@typescript-eslint/eslint-plugin": "^5.57.0",
         "@typescript-eslint/parser": "^5.57.0",
         "autoprefixer": "^10.4.13",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.37.0",
         "eslint-config-next": "^13.4.11",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import-helpers": "^1.3.1",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "29.7.0",
+        "jest-axe": "^8.0.0",
+        "jest-dom": "^4.0.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "sass": "^1.60.0",
