--- a/api/package.json
+++ b/api/package.json
@@ -50,6 +50,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
+        "crypto": "^1.0.1",
         "csv": "^6.2.7",
         "csv-parser": "^3.0.0",
         "dotenv": "^16.0.3",
