--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
     networks:
       - private
       - public
-  redis: # Name of container
+  redis:
     image: redis
+    container_name: redis
     ports:
       - 6379:6379
     volumes:
@@ -34,6 +35,7 @@ services:
       - private
   postgres:
     image: postgres:15.0
+    container_name: postgres
     restart: unless-stopped
     env_file: .env
     environment:
@@ -52,6 +54,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
+    container_name: frontend
     ports:
       - 8080:8080
     restart: unless-stopped
