--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -8,7 +8,14 @@ WORKDIR /app
 
 COPY . /app
 ENV NODE_ENV development
-RUN npm ci
+
+COPY --chown=node:node package*.json .
+RUN npm ci && npm cache clean --force && npm prune
+
+COPY --chown=node:node . .
+RUN npm run build
+
+#RUN npm ci
 
 CMD [ "npx", "prisma", "migrate", "dev" ]
 EXPOSE 3000
