--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -11,6 +11,9 @@ WORKDIR /app
 
 COPY . /app
 
+RUN apk update && apk upgrade
+RUN apk add --no-cache curl
+
 COPY --chown=node:node package*.json .
 RUN npm ci && npm cache clean --force && npm prune
 COPY --chown=node:node . .
