--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,10 @@ services:
       - esdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:9200/_cluster/health?wait_for_status=green&timeout=1s || exit 1"]
+      interval: 5s
+      timeout: 3s
   recommender:
     build:
       context: ./recommender
