--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,7 +141,7 @@ trigger-deploy-prod:
   script:
     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
-trigger-deploy-test:
+trigger-deploy-staging:
   stage: deploy
   image: ubuntu:latest
   only:
@@ -149,11 +149,39 @@ trigger-deploy-test:
   environment:
     name: Staging
     url: http://193.170.119.147
-  before_script:
-    - apt-get update -qq
-    - apt-get install -qq curl
-  script:
-    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=staging "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+  variables:
+    TRIGGER_PIPELINE: deploy-staging
+  trigger:
+    project: mmt-2022-masterproject-cookplaner/tastyplan-prod
+    branch: master
+    strategy: depend
+
+deploy-feature:
+  stage: deploy-dev
+  rules:
+    - if: $DEPLOY == 'feature'
+      when: always
+    - if: *on-feature
+      when: always
+      allow_failure: true
+    - if: *on-mr
+      when: manual
+      allow_failure: true
+  environment:
+    name: $ENV_NAME
+    url: $ENV_URL
+    on_stop: remove-feature
+    auto_stop_in: 1 week
+  variables:
+    TRIGGER_PIPELINE: deploy
+    MERGE_REQUEST_REF: ${CI_COMMIT_REF_NAME}
+    <<: *env-secrets
+  trigger:
+    project: solarassets/feature-environments
+    branch: main
+    strategy: depend
+
+
 
 sast:
   stage: test
