--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,6 +150,9 @@ trigger-deploy-staging:
     url: http://193.170.119.147
   variables:
     TRIGGER_PIPELINE: deploy-staging
+    CI_USER: $CI_REGISTRY_USER
+    CI_PASSWORD: $CI_REGISTRY_PASSWORD
+    CI_REGISTRY: $CI_REGISTRY
   trigger:
     project: mmt-2022-masterproject-cookplaner/tastyplan-prod
     branch: master
