--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   api:
+    image: gitlab.mediacube.at:5050/mmt-2022-masterproject-cookplaner/tastyplan/api:latest
     build:
       context: ./api
       dockerfile: Dockerfile.dev
@@ -32,7 +33,6 @@ services:
       - private
       - public
     healthcheck:
-      # TODO: what about prod env?
       test: [ "CMD-SHELL", "curl --fail http://localhost:3000/health || exit 1" ]
       interval: 10s
       timeout: 30s
@@ -72,6 +72,7 @@ services:
       timeout: 3s
       retries: 3
   frontend:
+    image: gitlab.mediacube.at:5050/mmt-2022-masterproject-cookplaner/tastyplan/client:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
@@ -121,6 +122,7 @@ services:
       interval: 5s
       timeout: 3s
   recommender:
+    image: gitlab.mediacube.at:5050/mmt-2022-masterproject-cookplaner/tastyplan/recommender:latest
     build:
       context: ./recommender
       dockerfile: Dockerfile.dev
