--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,36 +127,66 @@ build-recommender:
     - docker build -t $CI_REGISTRY_IMAGE/recommender:$IMAGE_TAG .
     - docker push $CI_REGISTRY_IMAGE/recommender:$IMAGE_TAG
 
-trigger-deploy-prod:
+deploy:
   stage: deploy
   image: ubuntu:latest
-  only:
-    - master
-  environment:
-    name: production
-    url: http://193.170.119.139
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
+      when: always
   before_script:
-    - apt-get update -qq
-    - apt-get install -qq curl
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+    - docker compose down --volumes
+    - docker compose up -d 
+    - docker compose logs
+  tags:
+    - prod
 
-trigger-deploy-staging:
+deploy-staging:
   stage: deploy
-  only:
-    - dev
-  environment:
-    name: Staging
-    url: http://193.170.119.147
-  variables:
-    TRIGGER_PIPELINE: deploy-staging
-    CI_USER: $CI_REGISTRY_USER
-    CI_PASSWORD: $CI_REGISTRY_PASSWORD
-    CI_REGISTRY: $CI_REGISTRY
-  trigger:
-    project: mmt-2022-masterproject-cookplaner/tastyplan-prod
-    branch: master
-    strategy: depend
+  image: ubuntu:latest
+  rules:
+    - if: $CI_COMMIT_BRANCH == "dev"
+      when: always
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker compose down --volumes
+    - docker compose up -d 
+    - docker compose logs
+  tags:
+    - staging
+
+#trigger-deploy-prod:
+#  stage: deploy
+#  image: ubuntu:latest
+#  only:
+#    - master
+#  environment:
+#    name: production
+#    url: http://193.170.119.139
+#  before_script:
+#    - apt-get update -qq
+#    - apt-get install -qq curl
+#  script:
+#    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+#
+#trigger-deploy-staging:
+#  stage: deploy
+#  only:
+#    - dev
+#  environment:
+#    name: Staging
+#    url: http://193.170.119.147
+#  variables:
+#    TRIGGER_PIPELINE: deploy-staging
+#    CI_USER: $CI_REGISTRY_USER
+#    CI_PASSWORD: $CI_REGISTRY_PASSWORD
+#    CI_REGISTRY: $CI_REGISTRY
+#  trigger:
+#    project: mmt-2022-masterproject-cookplaner/tastyplan-prod
+#    branch: master
+#    strategy: depend
 
 sast:
   stage: test
