--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,8 +152,8 @@ deploy-staging:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - docker compose down --volumes
-    - docker compose up -d 
-    - docker compose logs
+    - docker compose -f compose.yml -f compose.dev.yml up -d 
+    - docker compose -f compose.yml -f compose.dev.yml logs
   tags:
     - staging
 
